--- a/js/gis/dijit/Goto/templates/Goto.html
+++ b/js/gis/dijit/Goto/templates/Goto.html
@@ -11,6 +11,11 @@
     <button data-dojo-attach-point="goButton" class="" data-dojo-type="dijit/form/Button">Go!</button>
   </div>
   <div>
+    1:<input type="text" data-dojo-type="dijit.form.TextBox" data-dojo-attach-point="tbScale"   value="10000" />
+
+  </div>
+
+  <div>
     <span class="coordinateHint" data-dojo-attach-point="coordinateHintNode">Longitude/Latitude -100.1234 30.1234</span>
     <div class="questionIcon" data-dojo-attach-point="questionIconNode"></div>
   </div>
