--- a/js/gis/dijit/Help/templates/HelpDialog.html
+++ b/js/gis/dijit/Help/templates/HelpDialog.html
@@ -119,6 +119,36 @@
                   </div>
                 </div>
 
+
+                <div id="hContactTab" data-dojo-type="dijit/layout/ContentPane" title="Contact">
+
+
+				  <div class="htabContBG"> </div>
+
+                   <div class="htabContent htabContMain">
+                      <div  class="htabContent htabContMain">
+                       <br>
+                       <div style="position:absolute;top:5%;left:0px;text-align: justify;display: inline-block;margin:40px 10px 20px 10px">
+
+						<p align="justify"><font size="2">Please direct all inquiries concerning mapping issues to the GIS Department at <a href="mailto:webgis@co.okaloosa.fl.us">webgis@co.okaloosa.fl.us</a> . For all issues dealing with assessment information please contact the County Appraiser's office at (850) 651-7240. The Okaloosa GIS Deptarment is open to the public 8:00AM to 5:00PM Monday through Friday. We are located at 1804 Lewis Turner Blvd. Suite #402, Ft. Walton Beach, FL. Thanks for visiting this site and come back soon.</font></p>
+
+
+
+							<br>
+
+
+                       </div>
+
+
+                    </div>
+                  </div>
+
+
+                </div>
+
+
+
+
               <!--  <div data-dojo-type="dijit/layout/ContentPane" title="About">
 				  <div class="htabContBG"> </div>
 
