--- a/js/gis/dijit/Basemaps/templates/Basemaps.html
+++ b/js/gis/dijit/Basemaps/templates/Basemaps.html
@@ -1,5 +1,5 @@
 <div>
-    <div data-dojo-type="dijit/form/DropDownButton" data-dojo-props="iconClass:'basemapsIcon'" data-dojo-attach-point="dropDownButton">
+    <div id="bmDD" data-dojo-type="dijit/form/DropDownButton" class="basemapDD" data-dojo-props="iconClass:'basemapsIcon'" data-dojo-attach-point="dropDownButton">
         <span>
             ${title}
         </span>
