--- a/js/gis/dijit/Help/templates/HelpDialog.html
+++ b/js/gis/dijit/Help/templates/HelpDialog.html
@@ -48,29 +48,21 @@
                 </div>
 
                 <div id="hDisclaimerTab" data-dojo-type="dijit/layout/ContentPane" title="Disclaimer">
-
-
 				  <div class="htabContBG"> </div>
-
                    <div class="htabContent htabContMain">
                       <div  class="htabContent htabContMain">
                        <br>
-                       <div style="position:absolute;top:5%;left:0px;text-align: justify;display: inline-block;margin:40px 10px 20px 10px">
-
+                       <div style="font-size:12px;position:absolute;top:5%;left:0px;text-align: justify;display: inline-block;margin:40px 10px 20px 10px">
 							<p>The data on this site is provided as a public service and no guarantees or certifications, expressed or implied, are provided regarding accuracy of information herein, its use, or its interpretation.</p><br>
-
-							<p>The information you are about to access was derived from data compiled by Okaloosa County Public Offices, including, but not limited to, Property Appraiser's and GIS Offices. Statistics are provided solely for the purpose of gathering geographically dependent information. Derived information can only be used for unofficial purposes.</p><br>
-
+							<p>The information you are about to access was derived from data compiled by Okaloosa County Public Offices, including, but not limited to, Property Appraiser's and GIS Offices. Statistics are provided solely for the purpose of gathering geographically dependent information. Derived information can only be used for unofficial purposes.  Okaloosa County may elect to discontinue this service without notice at any point in the future.</p><br>
 							<p>Please direct all inquiries concerning mapping issues related to this site to the County GIS Division at (850) 651-7570. For all issues dealing with assessment information please contact the County Property Appraiser's office at (850) 651-7240. Please see the main HELP tab within the WebGIS site for additional information. </p><br>
 							</p>
-
+                         <br>
+                        <input type="button" data-dojo-type="dijit/form/Button" data-dojo-attach-event="onClick:acceptDisclaimer"  label="I Acknowledge the Disclaimer" iconClass="dijitNoIcon" ></input>
+                         <br>
                        </div>
-
-
                     </div>
                   </div>
-
-
                 </div>
 
 
@@ -101,17 +93,6 @@
                     </div>
 
 
-
-
-
-
-
-
-
-
-
-
-
                        </div>
 
 
@@ -131,10 +112,7 @@
                        <div style="position:absolute;top:5%;left:0px;text-align: justify;display: inline-block;margin:40px 10px 20px 10px">
 
 						<p align="justify"><font size="2">Please direct all inquiries concerning mapping issues to the GIS Department at <a href="mailto:webgis@co.okaloosa.fl.us">webgis@co.okaloosa.fl.us</a> . For all issues dealing with assessment information please contact the County Appraiser's office at (850) 651-7240. The Okaloosa GIS Deptarment is open to the public 8:00AM to 5:00PM Monday through Friday. We are located at 1804 Lewis Turner Blvd. Suite #402, Ft. Walton Beach, FL. Thanks for visiting this site and come back soon.</font></p>
-
-
-
-							<br>
+                    <br>
 
 
                        </div>
