--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,11 @@ body, html {
     padding: 0;
     overflow: hidden;
     /*font-family: Tahoma;*/
-    font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
-    font-size: 11px;
+    //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+    //font-family:  Futura,Broadway,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+   // font-family:  Garamond,Broadway,Helvetica Condensed, Frutiger, Avenir, Univers,Myriad,Sabon 
+    font-family:  Garamond,Calibri,Verdana, sans-serif;
+    font-size: 10px;
 }
 .appHeader {
     background: url("../images/linen.jpg") repeat-x scroll left top transparent;
@@ -25,7 +28,8 @@ body, html {
     color: #FFFFFF;
     float: left;
     font-size: 16pt;
-    font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+    //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+    font-family:Garamond,Calibri,Verdana, sans-serif;
     font-weight: bold;
     left: 60px;
     top: 15px;
@@ -49,7 +53,9 @@ body, html {
     top: 17px;
     right: 10px;
     text-align: right;
-    font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+    //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+    font-family:Garamond,Calibri,Verdana, sans-serif;
+    font-size:11px;
 }
 .appHeader .headerLinks a {
     color: #FFFFFF;
@@ -134,8 +140,10 @@ body, html {
     font-family: FontAwesome;
 }
 .sidebarCollapseButtonHorz {
-    width: 16px;
-    height: 25px;
+    //width: 16px;
+    //height: 25px;
+    width: 26px;
+    height: 55px;
     top: 48%;
     top: -webkit-calc(50% - 12px);
     top: -moz-calc(50% - 12px);
@@ -176,7 +184,8 @@ body, html {
     border-bottom: 1px solid #B5BCC7;
 }
 .sidebarCollapseButtonHorz .button {
-    padding-top: 4px;
+    //padding-top: 4px;
+    padding-top: 18px;
     padding-left: 2px;
 }
 .sidebarCollapseButtonVert .button {
