--- a/js/gis/dijit/prcmin/templates/prcmin.html
+++ b/js/gis/dijit/prcmin/templates/prcmin.html
@@ -20,27 +20,31 @@
 			  </tr>
 			  <tr>
 				<td>PIN:</td>
-				<td data-dojo-attach-point="pcPIN">sadasd</td>
+				<td data-dojo-attach-point="pcPIN"></td>
 			  </tr>
 			  <tr>
 				<td>Owner:</td>
-				<td data-dojo-attach-point="pcOwner">asdasd</td>
+				<td data-dojo-attach-point="pcOwner"></td>
 			  </tr>
 			  <tr>
 				<td>Mailing Address:</td>
-				<td data-dojo-attach-point="pcAddr">asdasd</td>
+				<td data-dojo-attach-point="pcAddr"></td>
+			  </tr>
+			  <tr>
+				<td>Site Address:</td>
+				<td data-dojo-attach-point="pcSiteAddr"></td>
 			  </tr>
 			  <tr>
 				<td>Approx Calculated Acres (NOT LEGAL VALUE):</td>
-				<td data-dojo-attach-point="pcAcres">sadasd</td>
+				<td data-dojo-attach-point="pcAcres"></td>
 			  </tr>
 			  <tr>
 				<td>Property Use:</td>
-				<td data-dojo-attach-point="pcPropuse">asdas</td>
+				<td data-dojo-attach-point="pcPropuse"></td>
 			  </tr>
 			  <tr>
 				<td>Land Use:</td>
-				<td data-dojo-attach-point="pcLanduse">asdasd</td>
+				<td data-dojo-attach-point="pcLanduse"></td>
 			  </tr>
 
 
@@ -61,11 +65,11 @@
 				</tr>
 				<tr>
 				   <td>COUNTY FUTURE LAND USE</td>
-				   <td data-dojo-attach-point="pcFLU">fdf</td>
+				   <td data-dojo-attach-point="pcFLU"></td>
 				</tr>
 				<tr>
 				   <td>COUNTY ZONING</td>
-				   <td data-dojo-attach-point="pcCtyZn">f</td>
+				   <td data-dojo-attach-point="pcCtyZn"></td>
 				</tr>
 				<tr>
 				   <td>FEMA FLOOD ZONE-BASE</td>
@@ -75,7 +79,7 @@
 
 				<tr>
 				   <td>RESOURCES SYSTEM (COBRA) AREA</td>
-				   <td data-dojo-attach-point="pcCobra">fsd</td>
+				   <td data-dojo-attach-point="pcCobra"></td>
 				</tr>
 				<tr>
 				   <td>IN A FLOODWAY</td>
