--- a/js/gis/dijit/Help/templates/HelpDialog.html
+++ b/js/gis/dijit/Help/templates/HelpDialog.html
@@ -21,7 +21,7 @@
 						   </div>
 
 						   <div style="padding:2px;margin:1px;">
-							  <span style="padding:10px;margin:10px;font-size: 14px;z-index: 900;">Version 0.9</span>
+							  <span data-dojo-attach-point="vers_str" style="padding:10px;margin:10px;font-size: 14px;z-index: 900;">Version 0.9</span>
 						   </div>
                        </div>
 
