--- a/js/viewer/templates/mapOverlay.html
+++ b/js/viewer/templates/mapOverlay.html
@@ -1,4 +1,4 @@
-<div style="position:absolute;bottom:0;left:0;z-index:40;">
+<div style="position:absolute;bottom:7px;left:190px;z-index:40">
     <div id="mapInfoDijit">
     </div>
 </div>
