--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -155,11 +155,50 @@
 														 <input id="tbSlAcreTo" type="text" autocomplete="on" data-dojo-type="dijit/form/ValidationTextBox" data-dojo-attach-point="tbSlAcreTo" data-dojo-props="name:'searchSlDateFrom',trim:true,required:true,value:'',placeholder:'Enter the text you want to search for.',class:'searchText'" style="width: 99px;float:right"></input>
 
 													</div>
+                                                    <br><br><br>
+													<div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
 
+													   <div style="float:left; padding:0px;margin;0px;">Sale Qualification:
+													   </div>
+													   <div style="padding: 0px; float: right; padding:0px;margin;0px;">
+														 <select id="selSaleDataQual" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
+															<option value="" selected="true">All Sales</option>
+															<option value="Q">Qualified</option>
+														 </select>
+													   </div>
+													</div>
+													<br>
+													<div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
+													   <div style="float:left; padding:0px;margin;0px;">Vacant or Improved:
+													   </div>
+													   <div style="padding: 0px; float: right; padding:0px;margin;0px;">
+														 <select id="selSaleDataVac" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
+															<option value="" selected="true">All Sales</option>
+															<option value="V">Vacant</option>
+															<option value="I">Improved</option>
+														 </select>
+													   </div>
+													</div>
+													<br>
+													<!--
+													<div style="padding: 0px; font-size: 9px; z-index: 900; width: 250px; height: 18px;">
+													   <div style="float:left; padding:0px;margin;0px;">Property Type:
+													   </div>
+													   <div style="padding: 0px; float: right; padding:0px;margin;0px;">
+														 <select id="selSaleDataType" style="font-size:11pt; width: 120px; padding:0px;margin;0px">
+															<option value="" selected="true">All Sales</option>
 
+														 </select>
+													   </div>
+													</div>
+													<br>
+													-->
 
-                                                    <br>
                                                 </div>
+
+
+
+
 
                                                 <div id="pMapFrm" class="pContRes" data-dojo-attach-point="pMapFrm" data-dojo-type="dijit/layout/ContentPane" style="display:none;font-size:12px">
                                                     <p>Use these map search tools to select parcels on the map</p>
