--- a/js/gis/dijit/Identify/css/Identify.css
+++ b/js/gis/dijit/Identify/css/Identify.css
@@ -9,6 +9,18 @@
 	width:100%;
 	margin-top: 5px;
 }
+.esriPopup {
+   font-family:  Garamond,Calibri,Verdana, sans-serif;
+   font-size: 12px;
+
+}
+
+.esriViewPopup .gallery {
+    position: relative;
+    width: 200px;
+    height: 50px;
+    margin: 0px 3px 0px 2px;
+}
 
 .esriPopup .loading {
 	height:20px;
