--- a/js/gis/dijit/property/css/property.css
+++ b/js/gis/dijit/property/css/property.css
@@ -1,23 +1,83 @@
 
 
 select {
-  font-size:10px;
+  font-size:9px;
   //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+  font-family:  Garamond,Calibri,Verdana, sans-serif;
+}
+ /*
+.propertyDijit * {
+     overflow: hidden !important;
+}
+ 
+.dijitDialogPaneContent  * {
+   overflow: hidden !important;
+
+}
+
+#propertyNode  {
+  overflow: hidden !important;
+
+}
+*/
+.dijitDialogPaneContent  {
+   overflow: hidden !important;
+
+}
+ 
+
+/*
+#propertyNode  * {
+  overflow: hidden !important;
+
+}
+
+#property_parent * {
+  //overflow: hidden !important;
 
 }
 
 
+.pResultListTab {
+    overflow: auto !important;
 
+}
+#pResultListTab {
+   overflow: auto !important;
+}
+#pResultDetailTab {
+   overflow: auto !important;
+}
+#pane1 {
+   overflow: auto !important;
+}
+#pSavedTab {
+  overflow: auto !important;
 
+}
+*/
 .propertyDijit .listdbootstrapFix{
     padding: 0 0 0 25px;
+    //overflow: hidden !important;
 }
 
 .propertyDijit .propertyContainer {
+     //overflow: hidden !important;
 	padding: 0px;
 	font-size: 11px;
 	//font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
 
+}
+
+.propertyContainer {
+     //overflow: hidden !important;
+	padding: 0px;
+	font-size: 11px;
+	//font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
+
+}
+.propertyContainer * {
+     //overflow: hidden !important;
 }
 .floatingWidget .propertyDijit .propertyContainer {
 	padding: 5px;
@@ -27,6 +87,8 @@ select {
     height: 575px;
     
 }
+
+ 
 .floatingWidget .propertyDijit .propertyNode {
     width: 350px;
      	
