--- a/js/gis/dijit/property/templates/PropertyDialog.html
+++ b/js/gis/dijit/property/templates/PropertyDialog.html
@@ -1,13 +1,13 @@
-<div class="propertyDijit">
+<div id="propertyDijitC" class="propertyDijit" style="overflow:hidden !important">
 
 
 
-    <div data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="containerNode" class="propertyContainer">
-        <div class="propertyNode">
+    <div data-dojo-type="dijit/layout/ContentPane" data-dojo-attach-point="propctrNode" class="propertyContainer" style="overflow:hidden !important">
+        <div id="propertyNode" data-dojo-attach-point="propertyNode" class="propertyNode" style="overflow:hidden !important">
 
-            <div id="pSearchTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer">
+            <div id="pSearchTabs" data-dojo-attach-point="pSearchTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer">
 
-                <div id="pSearchTab" data-dojo-type="dijit/layout/ContentPane" title="Search">
+                <div id="pSearchTab" data-dojo-attach-point="pSearchTab" data-dojo-type="dijit/layout/ContentPane" title="Search">
                     <div class="ptabContBG">
                     </div>
 
@@ -245,7 +245,6 @@
                                                     <br>
                                                 </div>
                                                 <br><br>
-                                                <br><br>
 
                                                 <div style="width:58%;margin: 3px 3px 5px 50px; font-size: 9px;">
                                                     <input type="button" data-dojo-type="dijit/form/Button" intermediateChanges="false" label="Search" iconClass="dijitNoIcon" style="float:left;" data-dojo-attach-event="onClick:doSearch"></input>
@@ -272,7 +271,7 @@
 
                     <div id="pResultsSubTabs" data-dojo-type="dijit/layout/TabContainer" class="propertyTabContainer">
 
-                        <div id="pResultListTab" data-dojo-type="dijit/layout/ContentPane" title="List">
+                        <div id="pResultListTab" class="pResultListTab" data-dojo-type="dijit/layout/ContentPane" title="List">
 
                             <div class="ptabContent ptabContMain" style="padding:0px !important;margin:0px !important;">
 
